--- a/index.html
+++ b/index.html
@@ -64,6 +64,14 @@
     form-action 'self';
   ">
 
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-07FDR2822M"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-07FDR2822M');
+  </script>
   </head>
 
   <body>
